--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -27,11 +27,11 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com">
-                    <img src="/assets/github.png">
+                    <img src="assets/github.png">
                     Github
                 </a>
                 <a class="apresentacao__links__navegacao" href="https://br.linkedin.com/in/isac-dias-gama-b126082b2">
-                    <img src="/assets/linkedin.png">
+                    <img src="assets/linkedin.png">
                     Linkedin
                 </a>      
                 <a class="apresentacao__links__navegacao" href="https://instagram.com/isacgama0">
@@ -40,7 +40,7 @@
                 </a>       
             </div>
         </section>
-        <img class="apresentacao__imagem" src="/assets/Foto.jpg" alt="Foto">
+        <img class="apresentacao__imagem" src="assets/Foto.jpg" alt="Foto">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Isac Gama.</p>
