--- a/curriculo.html
+++ b/curriculo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -36,7 +36,7 @@
             </ul>
             </div>    
         </section>
-        <img class="apresentacao__imagem" src="/assets/Foto.jpg" alt="Foto">
+        <img class="apresentacao__imagem" src="assets/Foto.jpg" alt="Foto">
     </main> 
     <footer class="rodape">
         <p>Desenvolvido por Isac Gama.</p>
