--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -23,7 +23,7 @@
             <p class="apresentacao__conteudo__texto">Atualmente, sou estudante da Universidade Federal do Cariri, no campus de Juazeiro do Norte, cursando Engenharia de Materiais. Em breve, pretendo migrar para o curso de Ciências da Computação. Paralelamente, estou realizando cursos de programação na Alura, por meio do programa Oracle One Education.
             </p>
         </section>
-        <img class="apresentacao__imagem" src="/assets/Foto.jpg" alt="Foto">
+        <img class="apresentacao__imagem" src="assets/Foto.jpg" alt="Foto">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Isac Gama.</p>
